[package]
name = "magnet"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
dolly = "0.4.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
